# test_task

./: CMakeLists.txt  README.md
src/client/: CMakeLists.txt  client.cpp  client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  recordInfo.h  socketconnection.cpp  socketconnection.h  tablemodelemployee.cpp  tablemodelemployee.h  tablemodeltask.cpp  tablemodeltask.h
src/client/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/client/socket/: socketconnection.cpp  socketconnection.h
src/client/tablemodel/: tablemodelemployee.cpp  tablemodelemployee.h  tablemodeltask.cpp  tablemodeltask.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h  utils.h
src/server/dbcontroller/: idbcontroller.h  pgdbcontroller.cpp  pgdbcontroller.h
src/server/server/: server.cpp  server.h
src/utils/: CMakeLists.txt  requests.h  utils.h
